[gd_scene load_steps=4 format=3 uid="uid://dmtjm8de7ep32"]

[ext_resource type="Script" path="res://controller/ai/ai_tank.gd" id="1_x14qc"]
[ext_resource type="PackedScene" uid="uid://dvr6bm2hlj5h4" path="res://tank/tank.tscn" id="2_1btk6"]
[ext_resource type="Script" path="res://controller/ai/ai_tank_state_machine.gd" id="3_7xwap"]

[node name="AITank" type="Node2D"]
script = ExtResource("1_x14qc")

[node name="Tank" parent="." groups=["Bot"] instance=ExtResource("2_1btk6")]

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_7xwap")

[connection signal="tank_killed" from="Tank" to="." method="_on_tank_tank_killed"]
[connection signal="tank_took_damage" from="Tank" to="." method="_on_tank_tank_took_damage"]
